--- a/src/Components/Nft/Nft.css
+++ b/src/Components/Nft/Nft.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2.5%;
+    padding-top: 2.5%;
 }
 
 .title{
@@ -143,10 +143,15 @@ form{
 .example-button{
     width: 115px;
     height: 40px;
-    background-color: rgb(255, 157, 0);
-    border-color: rgb(173, 107, 0);
+    background-color: rgb(0, 145, 255);
+    border-color: rgb(0, 107, 189);
     border-radius: 5px;
     color: white;
+}
+
+.example-button:hover{
+    background-color: rgb(109, 187, 255);
+    scale: 1.05;
 }
 
 @media(max-width: 700px){
